tests/algorithms/x/Erlang/graphs/even_tree.error
run: exit status 127
escript: exception error: no function clause matching lists:sublist(#{},2) (lists.erl, line 592)
  in function  main:'-main/0-Fun_2_loop/2-0-'/2 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/even_tree.erl, line 105)
  in call from main:main/0 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/even_tree.erl, line 125)
  in call from main:main/1 (/workspace/mochi/tests/algorithms/x/Erlang/graphs/even_tree.erl, line 134)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1